--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "ESNext",
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "ESNext"
+        ],
         "jsx": "react-jsx",
         "moduleResolution": "Node",
         "esModuleInterop": true,
@@ -13,12 +17,25 @@
         "noEmit": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "types": ["vite/client", "jest", "@testing-library/jest-dom"],
+        "types": [
+            "vite/client",
+            "jest",
+            "@testing-library/jest-dom"
+        ],
         "baseUrl": ".",
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": [
+                "src/*"
+            ]
         }
     },
-    "include": ["src", "**/*.test.ts", "**/*.test.tsx"],
-    "exclude": ["node_modules", "dist"]
+    "include": [
+        "src",
+        "**/*.test.ts",
+        "**/*.test.tsx"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
