--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@originjs/vite-plugin-federation": "^1.4.1",
         "i18next": "^25.0.2",
+        "i18next-browser-languagedetector": "^8.1.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-i18next": "^15.5.1",
@@ -29,6 +30,7 @@
         "@types/node": "^22.15.3",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@types/react-i18next": "^8.1.0",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.26.0",
         "eslint-plugin-react-hooks": "^5.2.0",
