--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         "types": [
             "vite/client",
             "jest",
-            "@testing-library/jest-dom"
+            "@testing-library/jest-dom",
+            "node"
         ],
         "baseUrl": ".",
         "paths": {
