--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,9 +2,7 @@
     "compilerOptions": {
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
         "target": "ES2022",
-        "lib": [
-            "ESNext",
-        ],
+        "lib": ["ESNext"],
         "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
         "skipLibCheck": true,
@@ -21,7 +19,5 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true
     },
-    "include": [
-        "vite.config.ts"
-    ]
+    "include": ["vite.config.ts"]
 }
