--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "^15.5.1",
-        "styled-components": "^6.1.17"
+        "styled-components": "6.1.17"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
