--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/react-dom": "^19.0.4",
         "@types/react-i18next": "^8.1.0",
         "@vitejs/plugin-react": "^4.4.1",
+        "@vitest/coverage-v8": "^3.1.3",
         "dotenv": "^16.5.0",
         "eslint": "^9.26.0",
         "eslint-plugin-react-hooks": "^5.2.0",
